--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         </div>
         <div class="botContents">
             <div class="displayImage">
-                <img id="offspringBase" src="">
+                <img id="offspringBase" src="https://static.wolvden.com/images/backgrounds/default.png">
                 <img id="offspringImport" src="">
             </div>
         </div>
         <script src="overlay.js" type="text/javascript"></script> 
         <div id="popup" onclick="popFunction()">
             <center>Instructions:</center>
-            <br />1. Copy & Paste the URL (in Base64 format) of the scry result you would like to check. You can use right-click "copy link" for this.
+            <br />1. Copy & Paste the URL (in Base64 format) of the scry result you would like to check. You can use right-click "copy link" for this. For an example of what that would look like, <span title="">hover here.</span>
             <br />2. Select which mutation you would like to check for, Albino or Melanism.
             <br />3. Click "check result." If it has the mutation, it will appear completely still. If it does not have the mutation, you will see a slight animation as the image flickers between your scry result and the reference image.
             <p><i><center>Click me to make me go away.</center></i></p>
