--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="botContents">
             <div class="displayImage">
-                <img id="offspringBase" src="https://static.wolvden.com/images/backgrounds/default.png">
+                <img id="offspringBase" src="">
                 <img id="offspringImport" src="">
             </div>
         </div>
