--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
         <div class="contents">
             <div class="topcontents">
-                <div class="textInput">
-                    <center></center>
-                </div>
+                <input class="textInput" id="importText" placeholder="Input Base64 here...">
                 <div class="mutationSelect">
-                    <center></center>
+                    <center>
+                    <p>Melanism <input type="checkbox" id="melaCheck"> Albinism <input type="checkbox" id="albinoCheck"></p>
+                    </center>
                 </div>
             </div>
             <div class="buttonContents">
