--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <div class="contents">
             <div class="topcontents">
+                <center>
                 <input class="textInput" id="importText" placeholder="Input Base64 here...">
+                </center>
                 <div class="mutationSelect">
                     <center>
                     <p>Melanism <input type="checkbox" id="melaCheck"> Albinism <input type="checkbox" id="albinoCheck"></p>
