--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="botContents">
                 <div class="displayImage">
-                    <img id="offspringBase" src="">
+                    <img id="offspringBase" src="https://static.wolvden.com/images/backgrounds/default.png">
                     <img id="offspringImport" src="">
                 </div>
             </div>
