--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="contents">
             <div class="topcontents">
                 <center>
-                <input class="textInput" id="importText" placeholder="Input Base64 here...">
+                <textarea id="importText" placeholder="Input Base64 here...">
                 </center>
                 <div class="mutationSelect">
                     <center>
