--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="contents">
             <div class="topcontents">
                 <center>
-                <textarea id="importText" placeholder="Input Base64 here..." cols="100" rows="10">
+                <textarea id="importText" placeholder="Input Base64 here..." cols="50" rows="10"></textarea>
                 </center>
                 <div class="mutationSelect">
                     <center>
