--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <br />4. Click "toggle image" to check the base image. If it seems like nothing happens, your offspring has the mutation. Otherwise, you will be able to see the differences.
                 <center><p><i>Click me to make me go away.</i></p></center>
             </div>
+            <div id="copyright">
+                ©
+            </div>
             <div id="credits">
                 placeholder text
             </div>
