--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 ©
             </div>
             <div id="credits">
-                placeholder text
+                <p>By Kendall Churchil | <b><a href="https://www.wolvden.com/profile/1639">ranuncudahlia#1639</a></b></p>
+                <p>Background by <b><a href="https://ocellifera.com/">Koby Hughes</a></b> | <b><a href="https://twitter.com/ocellifera">@ocellifera</a></b></p>
+                <p>Puppy bases (empty, Melanistic, and Albinistic) by <b><a href="https://www.wolvden.com/">Wolvden</a></b></p>
             </div>
             <script>
                 function popFunction() {
