--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <div class="displayImage">
                     <img id="offspringBase" src="melaref.png">
                     <img id="offspringImport" src="">
+                    <img src="backgroundoverlay.png">
                 </div>
             </div>
             <div id="popup" onclick="popFunction()">
