--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="botContents">
                 <div class="displayImage">
-                    <img id="offspringBase" src="melaref.png">
+                    <img id="offspringBase" src="default.png">
                     <img id="offspringImport" src="">
                     <img src="backgroundoverlay.png">
                 </div>
