--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="displayImage">
                     <img id="offspringBase" src="default.png">
                     <img id="offspringImport" src="">
-                    <img src="backgroundoverlay.png">
+                    <img src="newoverlay.png">
                 </div>
             </div>
             <div id="popup" onclick="popFunction()">
